--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.18.9",
+    "@nestjs/passport": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^27.5.2",
@@ -16,6 +17,8 @@
     "consign": "^0.1.6",
     "mdb-react-ui-kit": "^4.1.0",
     "mdbreact": "^5.2.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -57,6 +60,7 @@
     "@typescript-eslint/parser": "^5.30.4",
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.30.1",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
