--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.18.9",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@nestjs/passport": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -12,11 +15,16 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.3",
     "consign": "^0.1.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "mdb-react-ui-kit": "^4.1.0",
     "mdbreact": "^5.2.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "^18.1.0",
@@ -27,7 +35,8 @@
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "node-sass": "^6.0.1"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
